--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   	<meta name="author" content="Matthew King">
 
     <!-- TITLE -->
-    <title>RWU Web Design | Welcome</title>
+    <title>RWU Web Design | About</title>
 
     <!-- CSS LINK -->
     <link rel="stylesheet" href="./css/style.css">
@@ -26,8 +26,8 @@
 
         <nav>
           <ul>
-            <li class="current"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="current"><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
           </ul>
         </nav>
@@ -35,12 +35,6 @@
       </div>
     </header>
 
-    <section id="showcase">
-      <div class="container">
-        <h1>Affordable Professional Web Design</h1>
-        <p>Here is a bunch of meaningless text.</p>
-      </div>
-    </section>
 
     <section id="newsletter">
       <div class="container">
@@ -52,23 +46,22 @@
       </div>
     </section>
 
-    <section id="boxes">
+    <section id="main">
       <div class="container">
-        <div class="box">
-          <img src="./img/html_logo.png">
-          <h3>HTML5 Markup</h3>
-          <p>Again, more meaningless text.</p>
-        </div>
-        <div class="box">
-          <img src="./img/html_logo.png">
-          <h3>CSS3 Styling</h3>
-          <p>Again, more meaningless text.</p>
-        </div>
-        <div class="box">
-          <img src="./img/html_logo.png">
-          <h3>Graphic Design</h3>
-          <p>Again, more meaningless text.</p>
-        </div>
+        <article id="main-col">
+            <h1 class="page-title">About</h1>
+            <p>Here are a bunch of useless words.</p>
+            <p class="dark">Here are a couple more useless words.</p>
+        </article>
+
+        <aside id="sidebar">
+          <div class="dark">
+            <h3>What We Do</h3>
+            <p>A bunch of words.</p>
+            <p>Even more words than before.</p>
+            <p>Maybe a couple more words.</p>
+          </div>
+        </aside>
       </div>
     </section>
 
