Finished styling/turned off Google translate

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Affordable and professional web design">
 	  <meta name="keywords" content="web design, affordable web design, professional web design">
   	<meta name="author" content="Matthew King">
+    <meta name="google" content="notranslate">
 
     <!-- TITLE -->
     <title>RWU Web Design | Welcome</title>
