--- a/services.html
+++ b/services.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Affordable and professional web design">
-	  <meta name="keywords" content="web design, affordable web design, professional web design">
+	<meta name="keywords" content="web design, affordable web design, professional web design">
   	<meta name="author" content="Matthew King">
+    <meta name="google" content="notranslate">
 
     <!-- TITLE -->
     <title>RWU Web Design | Services</title>
